public/stylesheets/main.css
ul {
  margin-left: 1em;
  padding-left: 0;
}

li {
  list-style: none;
  margin: 0;
  padding: 0;
}

h1 {
  margin: 0;
}

#backlog {
  width: 250px;
  float: left;
}

#board {
  float: left;
}

li.stage {
  float: left;
  border: 1px solid black;
  min-height: 500px;
  width: 500px;
}

.header {
  text-align: center;
  border-bottom: 2px solid black;
}

.column {
  width: 250px;
  float: left;
}

li.work-item {
  width: 200px;
  border: 1px solid black;
  padding: 10px;
  margin-top: 10px;
}

